Detail page has been prepared

--- a/book-search-app/book-search/styles/globals.css
+++ b/book-search-app/book-search/styles/globals.css
@@ -24,3 +24,9 @@ body {
 .carousel .control-dots .dot.selected{
   @apply scale-150 bg-black
 }
+.booksShadow{
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+.title{
+  @apply text-[20px] text-[#D4AC0D] font-semibold
+}
